# github-actions

./: .coverage.wifi.29624.XRSnveKx  .coveragerc  .flake8  .gitignore  CHANGELOG.md  README.md  coverage_report.txt  index.html  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg
.github/actions/setup-python/: action.yml
.github/workflows/: deploy.yml  deployment.yml  test.yml  version-bump.yml
calculator/: calculator.py
tests/: test_calculator.py
