[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "github-actions-test"
authors = [{name = "Your Name", email = "your.email@example.com"}]
version = "0.1.0"
description = "A short description of your package"

[tool.semantic_release]
version_variable = ["calculator/__init__.py:__version__"]
version_toml = ['pyproject.toml:project.version']
branch = "main"
upload_to_pypi = false
upload_to_release = true
# ; build_command = python setup.py sdist bdist_wheel