[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-actions-test2"
authors = [{name = "Cormac Rynne", email = "cormac.ry@gmail.com"}]
version = "1.1.0"
readme = "README.md"
description = "A short description of your package"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-cov',
    'flake8',
    'black',
    'python-semantic-release',
    'isort',
    'flit',
    'build',
    'twine',
]

[tool.setuptools]
packages = {find = {include = ["calculator", "calculator.*"]}}

[tool.semantic_release]
version_variables = ["calculator/__init__.py:__version__"]
version_toml = ['pyproject.toml:project.version']
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "python -m build"